Fixed mobile image spacing

--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ form button:hover {
     /* background-size: cover; */
     object-fit: contain;
     background-position: center;
-    margin-right: 1rem;
+    /* margin-right: 1rem; */
 }
 
 /* Responsive Design */
